--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
   cloud_firestore: ^4.4.3
   firebase_app_check: ^0.1.1+12
   firebase_auth: ^4.2.9
