--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,13 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  assets_audio_player:
+    git:
+      url: https://github.com/benjitusk/Flutter-AssetsAudioPlayer.git
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.4.3
+  cloud_functions: ^4.0.12
   collection: ^1.17.0
   firebase_app_check: ^0.1.1+12
   firebase_auth: ^4.2.9
