changed app display name for Android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.benjitusk.YTS">
    <application
-        android:label="yts_flutter"
+        android:label="YTS"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
