--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     git:
       url: https://github.com/benjitusk/Flutter-AssetsAudioPlayer.git
   audio_service: ^0.18.9
+  audio_video_progress_bar: ^1.0.1
   audioplayers: ^3.0.1
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
