--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CLIENT_ID</key>
-	<string>3976870161-0eralstkbl3m6efe0tv7h2cq34p6io63.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.3976870161-0eralstkbl3m6efe0tv7h2cq34p6io63</string>
-	<key>API_KEY</key>
-	<string>AIzaSyATIYlSE0mRHxyTILjup8BEvPZz35z4qsA</string>
-	<key>GCM_SENDER_ID</key>
-	<string>3976870161</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.example.ytsFlutter</string>
-	<key>PROJECT_ID</key>
-	<string>yeshivat-torat-shraga</string>
-	<key>STORAGE_BUCKET</key>
-	<string>yeshivat-torat-shraga.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:3976870161:ios:53b9b12fb087dc2b0d74b0</string>
-	<key>DATABASE_URL</key>
-	<string>https://yeshivat-torat-shraga-default-rtdb.firebaseio.com</string>
-</dict>
+	<dict>
+		<key>CLIENT_ID</key>
+		<string>3976870161-9c4hbmni8av1jl1clfgpoo7b59855aun.apps.googleusercontent.com</string>
+		<key>REVERSED_CLIENT_ID</key>
+		<string>com.googleusercontent.apps.3976870161-9c4hbmni8av1jl1clfgpoo7b59855aun</string>
+		<key>API_KEY</key>
+		<string>AIzaSyATIYlSE0mRHxyTILjup8BEvPZz35z4qsA</string>
+		<key>GCM_SENDER_ID</key>
+		<string>3976870161</string>
+		<key>PLIST_VERSION</key>
+		<string>1</string>
+		<key>BUNDLE_ID</key>
+		<string>com.benjitusk.YTS</string>
+		<key>PROJECT_ID</key>
+		<string>yeshivat-torat-shraga</string>
+		<key>STORAGE_BUCKET</key>
+		<string>yeshivat-torat-shraga.appspot.com</string>
+		<key>IS_ADS_ENABLED</key>
+		<false></false>
+		<key>IS_ANALYTICS_ENABLED</key>
+		<false></false>
+		<key>IS_APPINVITE_ENABLED</key>
+		<true></true>
+		<key>IS_GCM_ENABLED</key>
+		<true></true>
+		<key>IS_SIGNIN_ENABLED</key>
+		<true></true>
+		<key>GOOGLE_APP_ID</key>
+		<string>1:3976870161:ios:cc657b3b144a3e7c0d74b0</string>
+		<key>DATABASE_URL</key>
+		<string>https://yeshivat-torat-shraga-default-rtdb.firebaseio.com</string>
+	</dict>
 </plist>
