--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,11 @@ dependencies:
   firebase_storage: ^11.0.14
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.14
   get_it: ^7.2.0
   intl: ^0.17.0
   just_audio: ^0.9.32
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
