--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
     sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+    adaptive_action_sheet: ^2.0.2
     assets_audio_player:
         git:
             url: https://github.com/benjitusk/Flutter-AssetsAudioPlayer.git
