--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     get_it: ^7.2.0
     intl: ^0.17.0
     just_audio: ^0.9.32
+    shared_preferences: ^2.1.1
     url_launcher: ^6.1.10
 
 dev_dependencies:
