--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-    sdk: '>=2.19.2 <3.0.0'
+    sdk: '>=3.0.0'
 
 dependencies:
     adaptive_action_sheet: ^2.0.2
@@ -22,6 +22,7 @@ dependencies:
     firebase_app_check: ^0.1.1+14
     firebase_auth: ^4.2.9
     firebase_core: ^2.7.0
+    firebase_dynamic_links: ^5.3.1
     firebase_storage: ^11.0.14
     flutter:
         sdk: flutter
