--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: yts_flutter
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.0+1
 
 environment:
     sdk: '>=3.0.0'
@@ -30,6 +30,7 @@ dependencies:
     get_it: ^7.2.0
     intl: ^0.17.0
     just_audio: ^0.9.32
+    safe_device: ^1.1.4
     shared_preferences: ^2.1.1
     url_launcher: ^6.1.10
 
