--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     just_audio: ^0.9.32
     safe_device: ^1.1.4
     shared_preferences: ^2.1.1
+    text_scroll: ^0.2.0
     url_launcher: ^6.1.10
 
 dev_dependencies:
