--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,13 +56,13 @@ android {
         applicationId "com.benjitusk.YTS"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        // minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         minSdkVersion 21
         multiDexEnabled true
-        versionCode 3
+        // versionCode 5
     }
 
 signingConfigs {
