--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     audio_service: ^0.18.9
     audio_video_progress_bar: ^1.0.1
     audioplayers: ^4.0.1
+    auto_size_text: ^3.0.0
     cached_network_image: ^3.2.3
     carousel_slider: ^4.2.1
     cloud_firestore: ^4.4.3
@@ -33,6 +34,7 @@ dependencies:
     google_api_availability: ^5.0.0
     intl: ^0.17.0
     just_audio: ^0.9.32
+    marquee: ^2.2.3
     package_info_plus: ^4.2.0
     safe_device: ^1.1.4
     shared_preferences: ^2.2.2
