--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     flutter:
         sdk: flutter
     flutter_markdown: ^0.6.14
+    flutter_onboarding_slider: ^1.0.11
     get_it: ^7.2.0
     google_api_availability: ^5.0.0
     intl: ^0.17.0
@@ -50,3 +51,4 @@ flutter:
     uses-material-design: true
     assets:
         - assets/
+        - assets/pics/
